// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GatsbyWordPressHealthCheck > should pass for a valid PANTHEON_CMS_ENDPOINT and invalid auth 1`] = `
[
  "No .env* file found, assuming production environment.",
  "Checking for PANTHEON_CMS_ENDPOINT or WPGRAPHQL_URL...",
  "⎩✅ PANTHEON_CMS_ENDPOINT is set!",
  "Validating CMS endpoint...",
  "⎩✅ PANTHEON_CMS_ENDPOINT is valid!",
  "⎩✅ WP Gatsby plugin is active!",
  "Validating Menu Item endpoint...",
  "⎩✅ Menu Items endpoint is valid!",
  "Validating authentication...",
  "⎩💡 Auth not valid.",
  "⎩💡 WP_APPLICATION_USERNAME is not set.",
  "⎩ Get the WP_APPLICATION_USERNAME here: 🔗 https://wordpress.test/wp/wp-admin/users.php",
  "⎩💡 WP_APPLICATION_PASSWORD is not set.",
  "⎩ Set a new WP_APPLICATION_PASSWORD here by clicking edit: 🔗 https://wordpress.test/wp/wp-admin/users.php",
]
`;

exports[`GatsbyWordPressHealthCheck > should pass for a valid WPGRAPHQL_URL and invalid auth 1`] = `
[
  "No .env* file found, assuming production environment.",
  "Checking for PANTHEON_CMS_ENDPOINT or WPGRAPHQL_URL...",
  "⎩✅ WPGRAPHQL_URL is set!",
  "Validating CMS endpoint...",
  "⎩✅ WPGRAPHQL_URL is valid!",
  "⎩✅ WP Gatsby plugin is active!",
  "Validating Menu Item endpoint...",
  "⎩✅ Menu Items endpoint is valid!",
  "Validating authentication...",
  "⎩💡 Auth not valid.",
  "⎩💡 WP_APPLICATION_USERNAME is not set.",
  "⎩ Get the WP_APPLICATION_USERNAME here: 🔗 https://wordpress.test/wp/wp-admin/users.php",
  "⎩💡 WP_APPLICATION_PASSWORD is not set.",
  "⎩ Set a new WP_APPLICATION_PASSWORD here by clicking edit: 🔗 https://wordpress.test/wp/wp-admin/users.php",
]
`;

exports[`GatsbyWordPressHealthCheck > should pass for a valid backend and valid auth 1`] = `
[
  "No .env* file found, assuming production environment.",
  "Checking for PANTHEON_CMS_ENDPOINT or WPGRAPHQL_URL...",
  "⎩✅ PANTHEON_CMS_ENDPOINT is set!",
  "Validating CMS endpoint...",
  "⎩✅ PANTHEON_CMS_ENDPOINT is valid!",
  "⎩✅ WP Gatsby plugin is active!",
  "Validating Menu Item endpoint...",
  "⎩✅ Menu Items endpoint is valid!",
  "Validating authentication...",
  "⎩✅ Auth is valid!",
]
`;

exports[`GatsbyWordPressHealthCheck > should show a helpful error message if the backend is invalid 1`] = `
[
  "No .env* file found, assuming production environment.",
  "Checking for PANTHEON_CMS_ENDPOINT or WPGRAPHQL_URL...",
  "⎩✅ PANTHEON_CMS_ENDPOINT is set!",
  "Validating CMS endpoint...",
  "⎩❌ PANTHEON_CMS_ENDPOINT could not be fetched from.
Check that invalid.wordpress.test is valid and provides a 200 response",
]
`;

exports[`GatsbyWordPressHealthCheck > should show a helpful error message if the wp-gatsby plugin is not enabled is invalid 1`] = `
[
  "No .env* file found, assuming production environment.",
  "Checking for PANTHEON_CMS_ENDPOINT or WPGRAPHQL_URL...",
  "⎩✅ WPGRAPHQL_URL is set!",
  "Validating CMS endpoint...",
  "⎩✅ WPGRAPHQL_URL is valid!",
  "⎩❌ WP Gatsby Plugin not active for WPGRAPHQL_URL.
Enable the WP Gatsby plugin at 🔗 https://wordpress.test.no-plugin/wp/wp-admin/plugins.php, 
then clear the cache at 🔗 https://wordpress.test.no-plugin/wp/wp-admin/options-general.php?page=pantheon-cache",
]
`;
